test/corpus/types.txt
================================================================================
Arrow type
================================================================================

module Test

val f : int -> int

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (uid_path (uid)))
  (val_declaration
    (lid)
    (binary_expression (lid) (lid))))

================================================================================
Dependent arrow type
================================================================================

module Test

val f : (x:int) -> int

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (uid_path (uid)))
  (val_declaration
    (lid)
    (binary_expression
      (paren_expression (type_annotation (lid) (lid)))
      (lid))))

================================================================================
Type application
================================================================================

module Test

val xs : list int

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (uid_path (uid)))
  (val_declaration
    (lid)
    (application (lid) (lid))))

================================================================================
Effect annotated type
================================================================================

module Test

val f : int -> Tot int

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (uid_path (uid)))
  (val_declaration
    (lid)
    (binary_expression
      (lid)
      (application (uid) (lid)))))
